--- a/hobbies.html
+++ b/hobbies.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
@@ -123,33 +127,74 @@
         </div>
       </div>
     </nav>
-    <h1>About Me</h1>
 
-    <div class="second-main-container">
-      <ul class="list-disc">
-        <li>Origin and family</li>
-        <p>
-          Originally from New Zealand I left the South Island to travel the
-          world. My family emmigrated from England around the 1800's
-        </p>
-        <p>My ancestry come from Scotland, England and Wales</p>
-        <li>Previous careers</li>
-        <p>
-          Executive Assistant, Flight Attendant, Junior Software Developer... Ok
-          not yet but soon
-        </p>
-        <li>Countries I've lived in</li>
-        <p>
-          New Zealand, Australia, UAE, Qatar, Nepal, Oman, Philippines, England
-        </p>
-        <li>Where to next?</li>
-        <p>Software Development</p>
+    <section class="snow">
+      <div class="snowflake"><i class="fa-regular fa-snowflake"></i></div>
+      <div class="snowflake1"><i class="fa-regular fa-snowflake"></i></div>
+      <div class="snowflake2"><i class="fa-regular fa-snowflake"></i></div>
+      <div class="snowflake3"><i class="fa-regular fa-snowflake"></i></div>
+      <div class="snowflake4"><i class="fa-regular fa-snowflake"></i></div>
+      <div class="snowflake5"><i class="fa-regular fa-snowflake"></i></div>
+      <div class="snowflake6"><i class="fa-regular fa-snowflake"></i></div>
+      <div class="snowflake7"><i class="fa-regular fa-snowflake"></i></div>
+      <div class="snowflake8"><i class="fa-regular fa-snowflake"></i></div>
+      <div class="snowflake9"><i class="fa-regular fa-snowflake"></i></div>
+      <div class="snowflake10"><i class="fa-solid fa-snowflake"></i></div>
+      <div class="snowflake11"><i class="fa-solid fa-snowflake"></i></div>
+      <div class="snowflake12"><i class="fa-regular fa-snowflake"></i></div>
+      <div class="snowflake13"><i class="fa-regular fa-snowflake"></i></div>
+      <div class="snowflake14"><i class="fa-regular fa-snowflake"></i></div>
+    </section>
+    <section>
+      <h1>Hobbies</h1>
+      <ul class="hobbie-list">
+        <li class="hobbie-list">Being in Nature 🌲</li>
+        <p class="hobbie-level">Level - Work in progress</p>
+        <li class="hobbie-list">Skiing ⛷️</li>
+        <p class="hobbie-level">Level - Depends on the day</p>
+        <li class="hobbie-list">Shopping 🛍️</li>
+        <p class="hobbie-level">Level - Advanced</p>
       </ul>
-    </div>
-    <div>
-      <p class="end-note">
-        ❄️ Go to my <a class="underline" href="hobbies.html">hobbies</a> page but be sure to wear something warm ❄️ ...
-      </p>
-    </div>
+    </section>
+    <section class="mountains">
+      <div class="mt1">
+        <div class="mtsnow1"></div>
+        <div class="snow-peak-1a"></div>
+        <div class="snow-peak-1b"></div>
+      </div>
+      <div class="mt2">
+        <div class="snow2"></div>
+        <div class="snow-peak-2a"></div>
+        <div class="snow-peak-2b"></div>
+        <div class="snow-peak-2c"></div>
+      </div>
+      <div class="mt3">
+        <div class="snow3"></div>
+        <div class="snow-peak-3a"></div>
+        <div class="snow-peak-3b"></div>
+        <div class="snow-peak-3c"></div>
+        <div class="snow-peak-3d"></div>
+      </div>
+      <div class="mt4">
+        <div class="snow4"></div>
+        <div class="snow-peak-4a"></div>
+        <div class="snow-peak-4b"></div>
+      </div>
+      <div class="mt5">
+        <div class="snow5"></div>
+        <div class="snow-peak-5a"></div>
+        <div class="snow-peak-5b"></div>
+        <div class="snow-peak-5c"></div>
+      </div>
+      <div class="mt6">
+        <div class="snow6"></div>
+        <div class="snow-peak-6a"></div>
+        <div class="snow-peak-6b"></div>
+        <div class="snow-peak-6c"></div>
+        <div class="snow-peak-6d"></div>
+      </div>
+    </section>
+
+    <footer></footer>
   </body>
 </html>
