final thoughts page

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                   >Video</a
                 >
                 <a
-                  href="finalthoughts.html"
+                  href="final-thought.html"
                   class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white"
                   >Final Thoughts</a
                 >
