--- a/final-thought.html
+++ b/final-thought.html
@@ -5,10 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-    />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
@@ -94,7 +90,7 @@
                   >Video</a
                 >
                 <a
-                  href="final-thought.html"
+                  href="finalthoughts.html"
                   class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white"
                   >Final Thoughts</a
                 >
@@ -127,74 +123,17 @@
         </div>
       </div>
     </nav>
-
-    <section class="snow">
-      <div class="snowflake"><i class="fa-regular fa-snowflake"></i></div>
-      <div class="snowflake1"><i class="fa-regular fa-snowflake"></i></div>
-      <div class="snowflake2"><i class="fa-regular fa-snowflake"></i></div>
-      <div class="snowflake3"><i class="fa-regular fa-snowflake"></i></div>
-      <div class="snowflake4"><i class="fa-regular fa-snowflake"></i></div>
-      <div class="snowflake5"><i class="fa-regular fa-snowflake"></i></div>
-      <div class="snowflake6"><i class="fa-regular fa-snowflake"></i></div>
-      <div class="snowflake7"><i class="fa-regular fa-snowflake"></i></div>
-      <div class="snowflake8"><i class="fa-regular fa-snowflake"></i></div>
-      <div class="snowflake9"><i class="fa-regular fa-snowflake"></i></div>
-      <div class="snowflake10"><i class="fa-solid fa-snowflake"></i></div>
-      <div class="snowflake11"><i class="fa-solid fa-snowflake"></i></div>
-      <div class="snowflake12"><i class="fa-regular fa-snowflake"></i></div>
-      <div class="snowflake13"><i class="fa-regular fa-snowflake"></i></div>
-      <div class="snowflake14"><i class="fa-regular fa-snowflake"></i></div>
-    </section>
-    <section>
-      <h1>Hobbies</h1>
-      <ul class="hobbie-list">
-        <li class="hobbie-list">Being in Nature 🌲</li>
-        <p class="hobbie-level">Level - Work in progress</p>
-        <li class="hobbie-list">Skiing ⛷️</li>
-        <p class="hobbie-level">Level - Depends on the day</p>
-        <li class="hobbie-list">Shopping 🛍️</li>
-        <p class="hobbie-level">Level - Advanced</p>
-      </ul>
-    </section>
-    <section class="mountains">
-      <div class="mt1">
-        <div class="mtsnow1"></div>
-        <div class="snow-peak-1a"></div>
-        <div class="snow-peak-1b"></div>
+    <div class="star-background">
+        <div class="background">
+          <div class="stars"></div>
+          <div class="twinkling"></div>
+        </div>
+        <div class="falling-words-container">
+          <span class="falling-word" style="--delay: 0s;">We can do this!</span>
+          <span class="falling-word" style="--delay: 2s;">Keep going! You're already there</span>
+          <span class="falling-word" style="--delay: 4s;">If it was easy everyone would be doing it</span>
+          <span class="falling-word" style="--delay: 6s;">Believe in yourself</span>
+        </div>
       </div>
-      <div class="mt2">
-        <div class="snow2"></div>
-        <div class="snow-peak-2a"></div>
-        <div class="snow-peak-2b"></div>
-        <div class="snow-peak-2c"></div>
-      </div>
-      <div class="mt3">
-        <div class="snow3"></div>
-        <div class="snow-peak-3a"></div>
-        <div class="snow-peak-3b"></div>
-        <div class="snow-peak-3c"></div>
-        <div class="snow-peak-3d"></div>
-      </div>
-      <div class="mt4">
-        <div class="snow4"></div>
-        <div class="snow-peak-4a"></div>
-        <div class="snow-peak-4b"></div>
-      </div>
-      <div class="mt5">
-        <div class="snow5"></div>
-        <div class="snow-peak-5a"></div>
-        <div class="snow-peak-5b"></div>
-        <div class="snow-peak-5c"></div>
-      </div>
-      <div class="mt6">
-        <div class="snow6"></div>
-        <div class="snow-peak-6a"></div>
-        <div class="snow-peak-6b"></div>
-        <div class="snow-peak-6c"></div>
-        <div class="snow-peak-6d"></div>
-      </div>
-    </section>
-
-    <footer></footer>
   </body>
 </html>
