--- a/hobbies.html
+++ b/hobbies.html
@@ -127,7 +127,7 @@
         </div>
       </div>
     </nav>
-
+    <div class="snowflake" style="--random-x: 0.2;">
     <section class="snow">
       <div class="snowflake"><i class="fa-regular fa-snowflake"></i></div>
       <div class="snowflake1"><i class="fa-regular fa-snowflake"></i></div>
@@ -145,6 +145,7 @@
       <div class="snowflake13"><i class="fa-regular fa-snowflake"></i></div>
       <div class="snowflake14"><i class="fa-regular fa-snowflake"></i></div>
     </section>
+  </div>
     <section>
       <h1>Hobbies</h1>
       <ul class="hobbie-list">
